fixed spacing issue with form labels and added vote average to cards

--- a/styles/partials/_grid.scss
+++ b/styles/partials/_grid.scss
@@ -37,6 +37,18 @@
                     color: #cf5858;
                 }
             }
+            .voteAverage {
+                color: white;
+                position: absolute;
+                top: 2px;
+                left: 2px;
+                margin: 0;
+                padding: 1px;
+                font-size: 1.2rem;
+                border: 1px solid black;
+                background-color: black;
+                border-radius: 5px;
+            }
         }
     }
     .errorMessage {
