--- a/styles/partials/_mediaQueries.scss
+++ b/styles/partials/_mediaQueries.scss
@@ -19,13 +19,18 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         max-width: 1550px;
-        margin: 0;
+        margin: 0 auto 50px auto;
         gap: 0px;
+        label {
+            margin: 0;
+            height: 20px;
+            margin-bottom: 30px;
+        }
     }
 }
 
 @media (min-width: 1550px) {
     form {
-        margin: 0 auto;
+        margin: 0 auto 100px auto;
     }
 }
